infra/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sguard-backend
  namespace: target-apps
spec:
  replicas: 1
  selector:
    matchLabels: {app: k8sguard-backend}
  template:
    metadata:
      labels: {app: k8sguard-backend}
    spec:
      containers:
        - name: backend
          image: k8sguard-backend:dev
          imagePullPolicy: IfNotPresent
          ports: [{containerPort: 5000}]
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false   # SQLite écrit un fichier local ; à durcir avec un volume si le temps permet
            capabilities: {drop: ["ALL"]}
          resources:
            requests: {cpu: "50m", memory: "64Mi"}
            limits: {cpu: "200m", memory: "128Mi"}
---
apiVersion: v1
kind: Service
metadata:
  name: k8sguard-backend
  namespace: target-apps
spec:
  selector: {app: k8sguard-backend}
  ports: [{port: 80, targetPort: 5000}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-target-apps
  namespace: target-apps
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-http
  namespace: target-apps
spec:
  podSelector: {matchLabels: {app: k8sguard-backend}}
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from: []
      ports: [{protocol: TCP, port: 5000}]
  egress:
    - to: []
      ports: [{protocol: UDP, port: 53}, {protocol: TCP, port: 53}]   # DNS uniquement
